fixing room price for wrong data relation
