# http/requests/room_price_request.go
@@ -1,0 +1,10 @@
+package requests
+
+type (
+	CreateRoomPriceRequest struct {
+		Code    string `form:"code" validate:"required"`
+		Type    string `form:"type" validate:"required"`
+		Price   string `form:"price" validate:"required"`
+		FloorId string `form:"floorId" validate:"required"`
+	}
+)
